@@ -22,6 +22,8 @@ procps-ng-NEXT
   * top: address a wishlist man page NLS suggestion        Debian #865689
   * top: fix potential distortion in 'Mem' graph display   issue #64
   * top: provide proper multi-byte string handling         issue #68
+  * top: startup defaults are fully customizable           Redhat #1153049, #1499410, issues #6, #78
+  *      see man page 6c. SYSTEM Configuration File
   * watch: define HOST_NAME_MAX where not defined          Debian #830734
   * vmstat: Fix alignment for disk partition format        issue #69
   * watch: Support ANSI 39,49 reset sequences              issue #73
